Added material chapter

--- a/raytracing_in_one_weekend_cuda.vcxproj
+++ b/raytracing_in_one_weekend_cuda.vcxproj
@@ -84,9 +84,11 @@
   <ItemGroup>
     <ClInclude Include="camera.h" />
     <ClInclude Include="color.h" />
+    <ClInclude Include="device_random.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="hittable_list.h" />
     <ClInclude Include="interval.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="math_utility.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="vec3.h" />
